Changed the algorithm for spacing out energy chunks on the solar panel so that they won't build up on the panel.
Made it so that energy chunks that are being pulled out of the air by cooling won't turn around if they are close to the burner.
Fixed an issue where the quantity of energy chunks exchanged with the air was too high when the burner was heating or cooling with nothing on it.
Fixed an issue where the beaker fluid level appeared to jump when first shown because once clock cycle was needed to initialize fluid appearance.
Fixed an issue where the sun's rays were briefly visible when the 2nd tab was first shown.
# 0.00.38 (72559) Mar 19, 2013
3/19/13 Deploy  to dev for interviews
Fixed issue where cloudiness of sun energy source was not reset when tab was reset.
Added feature where energy chunks are propagated through the energy systems if visibility is turned on after energy flow has started.
# 0.00.37 (72532) Mar 18, 2013
3/18/13 Deploy to dev for use in interviews.
Fixed an issues where the electrical energy chunks could get jammed up or even stuck on the solar panel after a reset of the tab.
Made the beaker's heating and cooling rate dependent upon the presence of thermal energy chunks when in "energy chunk visible" mode.
Made the light bulbs not appear to radiate light until energy chunks are present when in "energy chunk visible" mode.
# 0.00.35 (72520) Mar 18, 2013
3/18/13 Deploying for possible use in interviews.
Fixed a problem with odd E-chunk behavior when cooling is in progress (most visible from beaker) and fast-forward is enabled.
# 0.00.34 (72509) Mar 16, 2013
3/16/13 Deploy to dev for testing and review
Fixed some issues with z-order of the thermometer panel when interacting with the beaker.
Added logic to allow stacks of blocks to exchange energy with air as soon as max temperature is reached, even if temperature differential is below min for energy exchange with air.